# actual-alpha-import

./: .env.example  .gitignore  README.md  pyproject.toml  rules.yaml.example
src/actual_alpha_import/: __init__.py  cli.py  importer.py  parser.py  rules.py
tests/: test_parser.py
tests/fixtures/: sample.tsv
